[tool.poetry]
name = "neutron"
version = "0.0.0"
description = "Neutron scattering physics simulation"
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
