[tool.poetry]
name = "neutron"
version = "0.0.0"
description = "Neutron scattering physics simulation"
authors = ["FreddyWordingham <freddy@digilab.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
maturin = "^0.14.15"
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.0.0"
flake8 = "^4.0.1"

[tool.maturin]
python-source = "neutron"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "neutron"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
